# Humanoid-IITK

./: MotorControl.md  Motor_Control.md  README.md
GUI/: index.html
GUI/css/: style.css
GUI/js/: script.js
Simulation/: CMakeLists.txt  hello.world  joints_trajectory_controller.yaml  package.xml  trajectoasdasdasd.py  trajectory_client.py
Simulation/BIPED/Files/: Angles.mat  cal_lcal.m  calc_pos.m  calc_rpos.m  first.mat  new_simulation.m  plot_final.m  pos_calc.m  rpos.m  untitled1.slx
Simulation/launch/: start_meta_controller.launch
image_changer/: CMakeLists.txt  package.xml
image_changer/src/: image_subscriber.cpp
imagepub/: CMakeLists.txt  package.xml
imagepub/src/: cb_publisher.cpp  file_publisher.cpp
my_dynamixel_tutorial/: CMakeLists.txt  cleaned_angles_left.csv  data_clean.py  hard_coded_client.py  run.py  start_tilt_controller.launch  temp.py  tilt.yaml  trajectory_client.py
my_dynamixel_tutorial/BIPED/Files/: Rz.m  Untitled.m  cal_lcal.m  cal_lh.m  cal_rh.m  cal_waist.m  calc_eq_for_var_sl.m  calc_lpos.m  fromang.m  lpos.m  new_simulation.m  untitled.slx
my_dynamixel_tutorial/Data_angles/: angles.mat  angles_data.csv  angles_new.mat  cleaned_angles_left.csv  cleaned_angles_right.csv
my_dynamixel_tutorial/launch/: controller_manager.launch
